--- a/processing_python/Dockerfile
+++ b/processing_python/Dockerfile
@@ -1,5 +1,13 @@
 FROM python:3.11-slim
 
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    tesseract-ocr \
+    tesseract-ocr-eng \
+    tesseract-ocr-vie \
+    libgl1 \
+    libglib2.0-0 \
+ && rm -rf /var/lib/apt/lists/*
+
 workdir /app
 
 COPY requirements.txt .
