--- a/processing_python/Dockerfile
+++ b/processing_python/Dockerfile
@@ -8,7 +8,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libglib2.0-0 \
  && rm -rf /var/lib/apt/lists/*
 
-workdir /app
+RUN tesseract --version
+
+WORKDIR /app
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
