--- a/backend_node/package.json
+++ b/backend_node/package.json
@@ -14,14 +14,17 @@
     "lint": "eslint . --ext .ts"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.88.0",
     "axios": "^1.13.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "firebase-admin": "^13.6.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
