--- a/backend_node/package.json
+++ b/backend_node/package.json
@@ -11,7 +11,8 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "verify:idtoken": "ts-node-dev --transpile-only scripts/verify-idtoken.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.88.0",
