--- a/processing_python/requirements.txt
+++ b/processing_python/requirements.txt
@@ -10,3 +10,10 @@ qdrant-client
 langchain
 langchain-google-genai
 langchain-core
+torch
+torchvision
+numpy
+pyyaml
+tqdm
+opencv-python-headless
+ml-collections
