--- a/backend_node/package.json
+++ b/backend_node/package.json
@@ -21,6 +21,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "firebase-admin": "^13.6.0",
+    "googleapi": "^1.0.2",
+    "googleapis": "^169.0.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
