--- a/processing_python/Dockerfile
+++ b/processing_python/Dockerfile
@@ -13,7 +13,7 @@ RUN tesseract --version
 WORKDIR /app
 
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install -r requirements.txt
 
 COPY . .
 
