--- a/backend_node/package.json
+++ b/backend_node/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
     "firebase-admin": "^13.6.0",
     "googleapi": "^1.0.2",
     "googleapis": "^169.0.0",
