--- a/processing_python/docker-compose.yml
+++ b/processing_python/docker-compose.yml
@@ -9,17 +9,13 @@ services:
     environment:
       - TESSERACT_CMD=tesseract
       - TESSDATA_PREFIX=/usr/share/tesseract-ocr/5/tessdata
-      - HW_SEGMENTER_CKPT=/workspace/weights/segmenter/segmenter.ckpt
-      - HW_INPAINT_WEIGHTS=/workspace/weights/inpaint/lbam.pth
-
       - WPI_HW_URL=http://wpi_hw:8002/internal/remove-handwriting
 
       # IMPORTANT when running in docker
       - QDRANT_URL=http://qdrant:6333
-    volumes:
-      - ./weights:/workspace/weights
     depends_on:
       - qdrant
+      - wpi_hw
 
   wpi_hw:
     build: ./wpi_hw
@@ -27,6 +23,8 @@ services:
     gpus: all
     environment:
       - INTERNAL_TOKEN=${INTERNAL_TOKEN}
+      - SEGMENTER_CKPT=/workspace/final_application/weights/trans_u_net_max_recall.ckpt
+      - INPAINT_WEIGHTS=/workspace/final_application/weights/inpainting.pth
 
   qdrant:
     image: qdrant/qdrant:latest
