--- a/backend_node/apps/gateway/tsconfig.json
+++ b/backend_node/apps/gateway/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "CommonJS",
-    "rootDir": "src",
+    "rootDir": "apps/gateway/src",
     "outDir": "dist",
     "esModuleInterop": true,
     "strict": true,
@@ -12,6 +12,6 @@
     "forceConsistentCasingInFileNames": true,
     "types": ["node", "express"]
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*", "**/*.ts"],
   "exclude": ["node_modules", "dist"]
 }
