--- a/backend_node/package.json
+++ b/backend_node/package.json
@@ -1,44 +1,18 @@
 {
-  "name": "backend_node",
-  "version": "1.0.0",
-  "description": "",
-  "license": "ISC",
-  "author": "",
-  "type": "commonjs",
-  "main": "dist/server.js",
+  "name": "backend-monorepo",
+  "private": true,
+  "workspaces": [
+    "apps/*",
+    "libs/*"
+  ],
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "build": "tsc",
-    "start": "node dist/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint . --ext .ts",
-    "verify:idtoken": "ts-node-dev --transpile-only scripts/verify-idtoken.ts"
-  },
-  "dependencies": {
-    "@supabase/supabase-js": "^2.88.0",
-    "axios": "^1.13.2",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "express-rate-limit": "^8.2.1",
-    "googleapi": "^1.0.2",
-    "googleapis": "^169.0.0",
-    "helmet": "^8.1.0",
-    "jsonwebtoken": "^9.0.3",
-    "morgan": "^1.10.1",
-    "multer": "^2.0.2",
-    "zod": "^4.2.1"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/morgan": "^1.9.9",
-    "@types/multer": "^2.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "eslint": "^8.40.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.6.0"
+    "dev:gateway": "npm run dev -w apps/gateway",
+    "build:gateway": "npm run build -w apps/gateway",
+    "start:gateway": "npm run start -w apps/gateway",
+
+    "dev:worker": "npm run dev -w apps/worker",
+
+    "docker:up": "docker compose -f infra/docker-compose.yml up -d",
+    "docker:down": "docker compose -f infra/docker-compose.yml down -v"
   }
 }
